--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <nav class="navbar">
@@ -116,17 +117,29 @@
             <div class="form">
                 <input type="text" placeholder="NOME">
                 <input type="email" placeholder="E-MAIL">
-                <select class="form-select" aria-label="Default select example">
+                <select class="select" aria-label="Default select example">
                     <option selected>TIPO DE SERVIÇOS</option>
                     <option value="1">One</option>
                     <option value="2">Two</option>
                     <option value="3">Three</option>
-                  </select>
+                </select>
                 <button>MANDAR SINAL</button>
             </div>
+            <div class="texto">
+                <p><i class="bi bi-whatsapp"> </i> (61)98344-2017</p>
+                <p><i class="bi bi-envelope"> </i>sergio@batscollab.com.br</p>
+                <div class="icons">
+                    <a href="">
+                        <i class="fa-brands fa-square-facebook"></i></a>
+                    </a>
+                    /
+                    <a href="#"><i class="bi bi-instagram"></i></a>
+                </div>
+            </div>
+         </div>
         </div>
     </section>
-
+    <script src="https://kit.fontawesome.com/95f38015de.js" crossorigin="anonymous"></script><script src="https://kit.fontawesome.com/95f38015de.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
