--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
 </head>
 <body>
     <nav class="navbar">
@@ -43,15 +44,25 @@
         <div class="container">
             <div class="inicio">
                 <h1>QUEM SOMOS</h1>
-                <img src="/imagem/img2.png" alt="">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="custom-toggler">
-                      <span class="circle-escuro"></span>
-                      <span class="circle"></span>
-                      <span class="circle"></span>
-                    </span>
-                  </button>
-            </div>
+                <div id="carouselExampleIndicators" class="carousel slide">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active ">
+                            <img src="/imagem/img2.png" alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/imagem/img2.png"  alt="...">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/imagem/img2.png"  alt="...">
+                        </div>
+                    </div>
+                    <div class="espacoVazio"></div>
+                    <div class="carousel-indicators">
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="Bola active" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" class="Bola" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" class="Bola" aria-label="Slide 3"></button>
+                    </div>
+                </div>
             <div class="final">
                 <h1>NEM TODO HERÓI USA CAPA, MAS TODO HERÓI TEM SEU QG.</h1>
                 <p>Nossa base secreta A BATS collab possui um conjunto de profissionais para elaborar o melhor para sua empresa ou negócio, desde planejamento e aplicação da sua Identidade Visual, Site, E-commerce, Vídeos, Administração de Redes Sociais e muito mais.</p>
@@ -65,15 +76,24 @@
             <h1>QUEM SOMOS</h1>
             <p>Manter-se competitivo é uma necessidade no mercado atual e sabemos o quão importante é estar na internet. Para garantir que sua empresa tenha a oportunidade de divulgar seus produtos ou serviços de forma competitiva nesse meio, a BATS está pronta pra te ajudar.
             </p>
-            <img src="/imagem/img3.png" alt="">
-            <div class="circulos">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                    <span class="custom-toggler">
-                      <span class="circle-escuro"></span>
-                      <span class="circle"></span>
-                      <span class="circle"></span>
-                    </span>
-                  </button>
+            <div id="carouselExampleIndicators" class="carousel slide">
+                <div class="carousel-inner">
+                    <div class="carousel-item active ">
+                        <img src="/imagem/img3.png" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/imagem/img3.png"  alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/imagem/img3.png"  alt="...">
+                    </div>
+                </div>
+                <div class="espacoVazio"></div>
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="Bola active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" class="Bola" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" class="Bola" aria-label="Slide 3"></button>
+                </div>
             </div>
             
         </div>
@@ -94,18 +114,25 @@
     </section>
     <section class="Parceria">
         <div class="container">
-            <div class="imagem">
-                <img src="/imagem/img5.png" alt="">
+            <div id="carouselExampleIndicators" class="carousel slide">
+                <div class="carousel-inner">
+                    <div class="carousel-item active ">
+                        <img src="/imagem/img5.png" alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/imagem/img5.png"  alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="/imagem/img5.png"  alt="...">
+                    </div>
+                </div>
+                <div class="espacoVazio"></div>
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="Bola active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" class="Bola" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" class="Bola" aria-label="Slide 3"></button>
+                </div>
             </div>
-            <div class="circulos">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                   <span class="custom-toggler">
-                       <span class="circle-escuro"></span>
-                       <span class="circle"></span>
-                       <span class="circle"></span>
-                </span>
-              </button>
-        </div>
     </div>
     </section>
     <section class="ComoPodemos">
@@ -129,17 +156,16 @@
                 <p><i class="bi bi-whatsapp"> </i> (61)98344-2017</p>
                 <p><i class="bi bi-envelope"> </i>sergio@batscollab.com.br</p>
                 <div class="icons">
-                    <a href="">
-                        <i class="fa-brands fa-square-facebook"></i></a>
-                    </a>
-                    /
-                    <a href="#"><i class="bi bi-instagram"></i></a>
+                    <a href=""><i class="fa-brands fa-square-facebook"></i></a>/<a href="#"><i class="bi bi-instagram"></i></a>
                 </div>
             </div>
          </div>
         </div>
     </section>
+
+    <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/95f38015de.js" crossorigin="anonymous"></script><script src="https://kit.fontawesome.com/95f38015de.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
