--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                     </div>
                     <div class="espacoVazio"></div>
                     <div class="carousel-indicators">
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="Bola active" aria-current="true" aria-label="Slide 1"></button>
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" class="Bola" aria-label="Slide 2"></button>
-                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" class="Bola" aria-label="Slide 3"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="Bola active opacity-100" aria-current="true" aria-label="Slide 1"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" class="Bola opacity-100" aria-label="Slide 2"></button>
+                      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" class="Bola opacity-100" aria-label="Slide 3"></button>
                     </div>
                 </div>
             <div class="final">
@@ -90,9 +90,9 @@
                 </div>
                 <div class="espacoVazio"></div>
                 <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="0" class="Bola active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="1" class="Bola" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="2" class="Bola" aria-label="Slide 3"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="0" class="Bola active opacity-100" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="1" class="Bola opacity-100" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="2" class="Bola opacity-100" aria-label="Slide 3"></button>
                 </div>
             </div>
             
@@ -128,9 +128,9 @@
                 </div>
                 <div class="espacoVazio"></div>
                 <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide-to="0" class="Bola active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide-to="1" class="Bola" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide-to="2" class="Bola" aria-label="Slide 3"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide-to="0" class="Bola active opacity-100" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide-to="1" class="Bola opacity-100" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide-to="2" class="Bola opacity-100" aria-label="Slide 3"></button>
                 </div>
             </div>
     </div>
